src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTX11SyncObject_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTX11SyncObject_StringErrorContext.class */
public final class EXTX11SyncObject_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glImportSyncEXT(IJI)J", "net/labymod/core/laby3d/opengl/error/generated/EXTX11SyncObjectErrorContext");
        return methods;
    }
}
